# aidungeon

./: README.md  pyproject.toml
config/: default_config.toml
config/grammars/: classic.toml
config/grammars/items/: corridor.toml  lair.toml  shrine.toml
config/grammars/monsters/: corridor.toml  lair.toml  shrine.toml
config/prompts/: default_prompts.toml
docs/: generative_pipeline.md
src/aidungeon/: __init__.py  config.py  content.py  dungeon.py  evaluation.py  lsystem.py  main.py  markov_names.py  narrative.py
src/aidungeon/web/: __init__.py  app.py
src/aidungeon/web/assets/: app.js  index.html  style.css
src/aidungeon_lsystem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
