[project]
name = "aidungeon-lsystem"
version = "0.1.0"
description = "Procedural storytelling prototype using L-systems for layout and Ollama for narration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
aidungeon = "aidungeon.main:main"

[tool.setuptools.packages.find]
where = ["src"]
